/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.android.connecteddevice.connectionhowitzer.proto;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.google.android.connecteddevice.connectionhowitzer.proto";

// Messages for the ConnectionHowitzer feature.
message HowitzerMessage {
  // The type determines which proto field will be set.
  //
  // - Type "CONFIG" sets the field |config|;
  // - Type "RESULT" sets both the |config| field, which initiated the testing,
  //   as well as |result|;
  // - Type "ACK" does not set any fields. It's a response to the config or
  //   result sent from the other side.
  enum MessageType {
    UNKNOWN_TYPE = 0;
    CONFIG = 1;
    RESULT = 2;
    ACK = 3;
  }
  MessageType message_type = 1;

  Config config = 2;

  Result result = 3;
}

message Config {
  // A UUID generated by the phone side that identifies this test run.
  string test_id = 1;

  // True: IHU will send the payload; False: phone will send the payload.
  bool send_payload_from_ihu = 2;

  // How many bytes to send in one "message".
  int32 payload_size = 3;

  // How many messages to send.
  int32 payload_count = 4;
}

// The timestamps in this proto are device local time.
message Result {
  // Indicating whether this test iteration is valid.
  // Invalid case: received payloads that did not match the config.
  bool is_valid = 1;

  // The timestamps of when each payload was received.
  repeated .google.protobuf.Timestamp payload_received_timestamps = 2;

  // The timestamp of when the test was started.
  .google.protobuf.Timestamp test_start_timestamp = 3;
}
